# ai-kanban

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture_diagram.excalidraw  domain_model.md
docs/specs/: domain_driven_architecture_spec_v2_corrected.md
src/ai_kanban/: consumer.py  monitor.py
src/ai_kanban/domain/: artificial_employee.py  event_checks.py  events.py  repositories.py  services.py
src/ai_kanban/factories/: __init__.py  employee_factory.py
src/ai_kanban/infrastructure/: notion_mapper.py  rabbitmq_client.py  repositories.py  task_tracker.py
src/ai_kanban/workflows/: __init__.py  employee_workflow.py
tests/: conftest.py  test_artificial_employee.py  test_consumer.py  test_domain_events.py  test_event_checks.py  test_task_tracker.py
